--- a/index.html
+++ b/index.html
@@ -836,13 +836,13 @@ const now=dayjs();
 return{
 totalTasks:allTasks.length,
 totalUsers:this.regularUsers.length,
-completedTasks:allTasks.filter(t=>t.statusPekerjaan==='Selesai').length,
-pendingTasks:allTasks.filter(t=>t.statusPekerjaan==='Belum Selesai').length,
+completedTasks:allTasks.filter(t=>t.status_pekerjaan==='Selesai').length,
+pendingTasks:allTasks.filter(t=>t.status_pekerjaan!=='Selesai').length,
 todayTasks:allTasks.filter(t=>dayjs(t.tanggal,'DD/MM/YYYY').isSame(now,'day')).length,
 weeklyTasks:allTasks.filter(t=>dayjs(t.tanggal,'DD/MM/YYYY').isAfter(now.subtract(7,'day'))).length,
 monthlyTasks:allTasks.filter(t=>dayjs(t.tanggal,'DD/MM/YYYY').isSame(now,'month')).length,
-thisWeekCompleted:allTasks.filter(t=>t.statusPekerjaan==='Selesai' && dayjs(t.tanggal,'DD/MM/YYYY').isAfter(now.subtract(7,'day'))).length,
-thisMonthCompleted:allTasks.filter(t=>t.statusPekerjaan==='Selesai' && dayjs(t.tanggal,'DD/MM/YYYY').isSame(now,'month')).length
+thisWeekCompleted:allTasks.filter(t=>t.status_pekerjaan==='Selesai' && dayjs(t.tanggal,'DD/MM/YYYY').isAfter(now.subtract(7,'day'))).length,
+thisMonthCompleted:allTasks.filter(t=>t.status_pekerjaan==='Selesai' && dayjs(t.tanggal,'DD/MM/YYYY').isSame(now,'month')).length
 };
 },
 
@@ -1262,9 +1262,13 @@ alert(`User "${user.name}" dan semua laporannya berhasil dihapus!`);
 
 // WhatsApp Share Function
 shareToWhatsApp(task){
+// Get teknisi name from user data
+const user = this.registeredUsers.find(u => u.id === task.user_id);
+const teknisiName = user ? user.name : 'Unknown';
+
 let message=`🔧 *LAPORAN PEKERJAAN UPSRS*\n\n`;
 message+=`📅 *Tanggal:* ${task.tanggal} ${task.waktu}\n`;
-message+=`👤 *Teknisi:* ${task.teknisi}\n`;
+message+=`👤 *Teknisi:* ${teknisiName}\n`;
 message+=`🏢 *Lokasi:* ${task.gedung} - ${task.ruangan}\n`;
 message+=`📋 *Pelapor:* ${task.pelapor||'-'}\n\n`;
 message+=`❌ *PERMASALAHAN:*\n${task.masalah}\n\n`;
@@ -1278,8 +1282,8 @@ message+=`📅 *Waktu Pending:* ${task.tanggal} ${task.waktu}\n\n`;
 message+=`✅ *STATUS SEKARANG: SELESAI*\n`;
 message+=`📝 *Penyelesaian:*\n${task.penyelesaian}\n\n`;
 message+=`📅 *Waktu Selesai:* ${task.tanggalSelesai} ${task.waktuSelesai}\n`;
-}else if(task.statusPekerjaan === 'Belum Selesai'){
-// Task is still pending
+}else if(task.status_pekerjaan === 'Belum Selesai' || task.statusPekerjaan === 'Belum Selesai'){
+// Task is still pending - check both field names
 message+=`⚠️ *STATUS:* Belum Selesai\n`;
 message+=`📝 *Alasan Pending:* ${task.penyelesaian}\n`;
 message+=`📅 *Waktu:* ${task.tanggal} ${task.waktu}\n`;
@@ -1608,7 +1612,7 @@ base64ToBlob(base64) {
 <p class="text-xs text-slate-500 mb-1" x-text="task.gedung"></p>
 <p class="text-xs text-slate-400" x-text="`${task.tanggal} ${task.waktu}`"></p>
 <div class="mt-2">
-<span :class="task.statusPekerjaan==='Selesai'?'bg-emerald-100 text-emerald-700':'bg-orange-100 text-orange-700'" class="px-2 py-1 rounded text-xs font-bold" x-text="task.statusPekerjaan"></span>
+<span :class="task.status_pekerjaan==='Selesai'?'bg-emerald-100 text-emerald-700':'bg-orange-100 text-orange-700'" class="px-2 py-1 rounded text-xs font-bold" x-text="task.status_pekerjaan"></span>
 </div>
 </div>
 </div>
@@ -1617,7 +1621,7 @@ base64ToBlob(base64) {
 <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg>
 Share WhatsApp
 </button>
-<template x-if="task.statusPekerjaan==='Belum Selesai'">
+<template x-if="task.status_pekerjaan!=='Selesai'">
 <button @click="editPendingTask(task)" class="flex-1 bg-emerald-500 text-white py-2 rounded-lg text-xs font-bold hover:bg-emerald-600 transition">Edit Selesai</button>
 </template>
 </div>
@@ -1960,7 +1964,7 @@ Share WhatsApp
 <div class="flex-1">
 <div class="flex items-center gap-2 mb-2">
 <h4 class="font-bold text-sm text-slate-800" x-text="task.ruangan"></h4>
-<span :class="task.statusPekerjaan==='Selesai'?'bg-emerald-100 text-emerald-700':'bg-orange-100 text-orange-700'" class="px-2 py-1 rounded text-xs font-bold" x-text="task.statusPekerjaan"></span>
+<span :class="task.status_pekerjaan==='Selesai'?'bg-emerald-100 text-emerald-700':'bg-orange-100 text-orange-700'" class="px-2 py-1 rounded text-xs font-bold" x-text="task.status_pekerjaan"></span>
 </div>
 <h5 class="font-semibold text-sm text-slate-700 mb-1" x-text="task.gedung"></h5>
 <p class="text-xs text-slate-500 mb-1" x-text="`${task.tanggal} ${task.waktu}`"></p>
@@ -1968,7 +1972,7 @@ Share WhatsApp
 <div class="flex gap-2">
 <button @click="viewingTask=task" class="px-3 py-1 bg-blue-100 text-blue-600 rounded-lg text-xs font-bold hover:bg-blue-200">Detail</button>
 <button @click="shareToWhatsApp(task)" class="px-3 py-1 bg-green-100 text-green-600 rounded-lg text-xs font-bold hover:bg-green-200">Share</button>
-<template x-if="task.statusPekerjaan==='Belum Selesai'">
+<template x-if="task.status_pekerjaan!=='Selesai'">
 <button @click="editPendingTask(task)" class="px-3 py-1 bg-emerald-100 text-emerald-600 rounded-lg text-xs font-bold hover:bg-emerald-200">Edit Selesai</button>
 </template>
 </div>
@@ -2108,7 +2112,7 @@ Share WhatsApp
 <div class="flex-1">
 <div class="flex items-center gap-2 mb-2">
 <h4 class="font-bold text-sm text-slate-800" x-text="task.ruangan"></h4>
-<span :class="task.statusPekerjaan==='Selesai'?'bg-emerald-100 text-emerald-700':'bg-orange-100 text-orange-700'" class="px-2 py-1 rounded text-xs font-bold" x-text="task.statusPekerjaan"></span>
+<span :class="task.status_pekerjaan==='Selesai'?'bg-emerald-100 text-emerald-700':'bg-orange-100 text-orange-700'" class="px-2 py-1 rounded text-xs font-bold" x-text="task.status_pekerjaan"></span>
 </div>
 <h5 class="font-semibold text-sm text-slate-700 mb-1" x-text="task.gedung"></h5>
 <p class="text-xs text-slate-500 mb-1" x-text="`${task.tanggal} ${task.waktu}`"></p>
@@ -2116,7 +2120,7 @@ Share WhatsApp
 <div class="flex gap-2">
 <button @click="viewingTask=task" class="px-3 py-1 bg-blue-100 text-blue-600 rounded-lg text-xs font-bold hover:bg-blue-200">Detail</button>
 <button @click="shareToWhatsApp(task)" class="px-3 py-1 bg-green-100 text-green-600 rounded-lg text-xs font-bold hover:bg-green-200">Share</button>
-<template x-if="task.statusPekerjaan==='Belum Selesai'">
+<template x-if="task.status_pekerjaan!=='Selesai'">
 <button @click="editPendingTask(task)" class="px-3 py-1 bg-emerald-100 text-emerald-600 rounded-lg text-xs font-bold hover:bg-emerald-200">Edit Selesai</button>
 </template>
 </div>
